Add play menu, extract stlyes and strings, add colors
Play button now takes you to play menu, refactored styling and some hard
coded strings, added colors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="rotygames.regexgolf">
 
-    <!--android:theme="@style/AppTheme">-->
+    <!-- android:theme="@style/AppTheme"> -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon"
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PlayMenuActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_play_menu"
+            android:theme="@style/FullscreenTheme"></activity>
     </application>
 
 </manifest>
