--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="rotygames.regexgolf">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <!-- android:theme="@style/AppTheme"> -->
     <application
         android:allowBackup="true"
@@ -30,6 +31,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".HelpActivity"></activity>
-    </application>
 
+    </application>
 </manifest>
