--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HelpActivity"></activity>
-
+        <activity android:name=".HelpActivity" />
+        <activity android:name=".AboutUsActivity"></activity>
     </application>
+
 </manifest>
